--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     var map = L.map('map', {
       zoomControl: false, // Add zoom control separately below
-      center: [31.053028,-17.824858], // Initial map center
+      center: [-17.824858,31.053028], // Initial map center
       zoom: 10, // Initial zoom level
       attributionControl: false, // Instead of default attribution, we add custom at the bottom of script
       scrollWheelZoom: false
