--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       // Add all points into a heat layer
       var heat = L.heatLayer(data, {
         radius: 15,
+        blur: 5,
       })
 
       // Add the heatlayer to the map
